chore: update API base URL

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
-VITE_API_BASE_URL=https://your-app.railway.app
+# API配置
+VITE_API_BASE_URL=https://sanchuangsai.chenhao.xin/api
+
+# 应用配置
 VITE_APP_TITLE=城乡物流配送系统
 VITE_APP_DESCRIPTION=高效的城乡物流配送解决方案 
