--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  environment = { NODE_VERSION = "16" }
 
 [[redirects]]
   from = "/*"
@@ -8,9 +9,11 @@
   status = 200
 
 [build.environment]
-  NODE_VERSION = "16"
+  VITE_API_BASE_URL = "https://sanchuangsai.chenhao.xin/api"
 
 [[headers]]
   for = "/*"
     [headers.values]
-    Access-Control-Allow-Origin = "*" 
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization" 
